--- a/generate/templates/resource.template
+++ b/generate/templates/resource.template
@@ -84,7 +84,7 @@ func (r *{{.StructName}}) SetCreationPolicy(policy *policies.CreationPolicy) {
 {{if not .IsCustomProperty}}
 // MarshalJSON is a custom JSON marshalling hook that embeds this object into
 // an AWS CloudFormation JSON resource's 'Properties' field and adds a 'Type'.
-func (r *{{.StructName}}) MarshalJSON() ([]byte, error) {
+func (r {{.StructName}}) MarshalJSON() ([]byte, error) {
 	type Properties {{.StructName}}
 	return json.Marshal(&struct{
 		Type string
@@ -96,7 +96,7 @@ func (r *{{.StructName}}) MarshalJSON() ([]byte, error) {
 		{{if .HasCreationPolicy}}CreationPolicy *policies.CreationPolicy `json:"CreationPolicy,omitempty"`{{end}}
 	}{
 		Type: r.AWSCloudFormationType(),
-		Properties: (Properties)(*r),
+		Properties: (Properties)(r),
 		DependsOn: r._dependsOn,
 		Metadata: r._metadata,
 		DeletionPolicy: r._deletionPolicy,
@@ -137,4 +137,5 @@ func (r *{{.StructName}}) UnmarshalJSON(b []byte) error {
 
 	return nil
 }
+
 {{end}}
